@@ -1,10 +1,13 @@
 
-[*] Thu Jun 13 2002 - netcat (cvs)
+[*] Fri Jun 14 2002 - netcat (cvs)
 
   o Fixed a bug in UDP listen mode with unspecified port where Netcat was not
     actually listening.
   o Now a verbosity level 2 message is printed on listening.
   o Made netcat_strid() public in network.c with some minor changes.
+  o More code cleanup.  Added a global variable netcat_mode to specify in which
+    mode netcat was launched.
+  o Fixed a preprocessor warning on some OSes.
 
 
 [*] Mon Jun 10 2002 - netcat v0.5.1
